--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "calculator",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://robertsh26.github.io/calculator",
+  "homepage": "https://github.com/robertsh26/robertsh26.github.io-calculator",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
